# no-dice

./: Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
debian/: changelog  control  copyright
dll/: Makefile.am  Makefile.in
installer/: Makefile.am  Makefile.in  no-dice.nsi.in  pomeranian.nsi.in
src/: Makefile.am  Makefile.in  no_dice.c  no_dice.desktop.in  no_dice.ui  no_dice.vala
